--- a/scss/_bass.scss
+++ b/scss/_bass.scss
@@ -15,6 +15,8 @@ $res-h1-font: clamp(60px, 21vw, 120px);
 $h2-font: 7rem;
 $h3-font: clamp(20px, 10vw, 60px);
 $h4-font: 2rem;
+$h5-font: 6rem;
+$h6-font: 2.5rem;
 $a-font: 1.2rem;
 $small-font: 1rem;
 // font-families
@@ -29,6 +31,7 @@ $decor: #ecdabc;
 $line: #ceb286;
 $strong: #543c10;
 $white: #ffffff;
+$black: #000000;
 
 // body
 
