--- a/scss/abstracts/_utils.scss
+++ b/scss/abstracts/_utils.scss
@@ -50,6 +50,14 @@
   font-size: $h2-font;
 }
 
+.title-3 {
+  font-size: $h5-font;
+}
+
+.sub-title {
+  font-size: $h6-font;
+}
+
 .full-size {
   width: 100%;
   height: 100%;
