--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 
 @import "./layouts/_layout";
 @import "./layouts/_navbar";
+@import "./layouts/_footer";
 
 @import "./components/_btns";
 @import "./components/_hamb";
