--- a/scss/abstracts/_utils.scss
+++ b/scss/abstracts/_utils.scss
@@ -14,6 +14,13 @@
   justify-content: center;
 }
 
+.start-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
 .section {
   max-width: 100%;
   width: 100%;
