--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -66,6 +66,11 @@
           overflow: hidden;
           margin: 0 0.5rem;
 
+          @media only screen and (max-width: 1060px) {
+            width: 10rem;
+            height: 6rem;
+          }
+
           img {
             transition: all 0.5s ease;
             transform-origin: center;
@@ -87,6 +92,10 @@
     height: 800px;
     align-items: flex-end;
     justify-content: flex-end;
+
+    @media only screen and (max-width: 1060px) {
+      padding: 0 2rem;
+    }
 
     .intro-content {
       flex: 0 0 45%;
@@ -208,6 +217,10 @@
       right: 0;
       top: 50%;
       transform: translateY(-50%);
+
+      @media only screen and (max-width: 1060px) {
+        right: 2rem;
+      }
 
       &:hover img {
         filter: grayscale(0.4);
@@ -355,6 +368,10 @@
       position: relative;
       margin-bottom: 5rem;
 
+      @media only screen and (max-width: 1060px) {
+        padding: 0 2rem;
+      }
+
       :after {
         content: "";
         height: 100%;
@@ -435,5 +452,17 @@
         transform: translateY(0);
       }
     }
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  .title-2 {
+    font-size: 6vw;
+  }
+  .title-3 {
+    font-size: 6vw;
+  }
+  .sub-title {
+    font-size: 3vw;
   }
 }
